--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.padeoe.nju</groupId>
     <artifactId>libpdf</artifactId>
-    <version>0.2.8-pre</version>
+    <version>0.2.8</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
